# TopGl

./: 3.3.shader.fs  3.3.shader.vs  CMakeLists.txt  README.md  README.nd  build.sh
include/camera/: camera.h
include/glad/: glad.h
include/glad3.0/glad/: glad.h
include/glad3.3/glad/: glad.h
include/shader/: shader.h
lib/: libglfw.so.3.3
lib/mac/: libglfw.3.3.dylib
src/: glad.c  main.cpp
src/shader/: shader.cpp
